# GMM

./: CMakeLists.txt  Makefile  pipelined_gmm.cpp  train.cpp  xsens_gravity_0.csv
include/util/: quantize.h
util/: quantize.cpp
